@@ -13,6 +13,21 @@ The download links are provided here:
 [JDK11](https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html), 
 [JavaFX](https://gluonhq.com/products/javafx/)
 
+Run
+----
+In order to compile type this commend into your terminal.
+```shell
+javac --module-path javafx-sdk-11.0.2/lib --add-modules=javafx.controls main.java
+```
+Run
+```shell
+java --module-path javafx-sdk-11.0.2/lib --add-modules=javafx.controls main.java
+```
+
 Additional information
 ----------------------
-[Setting](https://stackoverflow.com/questions/52682195/how-to-get-javafx-and-java-11-working-in-intellij-idea)
+To setting environment in IntelliJ: [Setting](https://stackoverflow.com/questions/52682195/how-to-get-javafx-and-java-11-working-in-intellij-idea)
+
+Authors
+-------
+Team Eleven (Daewoong Ko, Woongrae Cho, Hee Jun Park, Jaemo Koo, Heeseon Kim)
